// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DowntimeOverviewDialog > renders correctly 1`] = `
<div
  data-v-ac45726d=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-ac45726d=""
    iconcolor="lw-red"
    title="Downtime overview"
    titleicon="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z"
  />
  <v-card-text-stub
    class="px-4 py-0"
    data-v-ac45726d=""
    tag="div"
  >
    <generic-tabs-row-stub
      color=""
      countfunc="[Function]"
      data-v-ac45726d=""
      disabledrulefunc="[Function]"
      grow="false"
      height="48"
      items="[object Object],[object Object],[object Object]"
      labelkey="name"
      modelvalue="0"
      notclickable="false"
      sizeclass=""
      tabnamefn="[Function]"
    />
    <v-window-stub
      class="overflow-visible"
      continuous="false"
      crossfade="false"
      data-v-ac45726d=""
      direction="horizontal"
      disabled="false"
      mandatory="force"
      modelvalue="0"
      nexticon="$next"
      previcon="$prev"
      reverse="false"
      selectedclass="v-window-item--active"
      showarrows="false"
      tag="div"
      verticalarrows="false"
    >
      
      <v-window-item-stub
        data-v-ac45726d=""
        disabled="false"
        eager="false"
      >
        <shiftview-cards-list-stub
          additionallineprops="[object Object]"
          bordercolorkey="[Function]"
          class="card-list mx-n4 px-4 pt-4 align-content-start"
          data-v-ac45726d=""
          dense="false"
          disabled="false"
          iconcolorfn="[Function]"
          iconfn="[Function]"
          items=""
          primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
          primaryactiontext=""
          primaryactiontooltip=""
          secondaryactionicon=""
          secondaryactiontooltip=""
          subtitleitemsprops="[Function]"
          tertiaryactionicon="[Function]"
          tertiaryactiontooltip="Unjoin"
          titleiconfn="[Function]"
          titletextkey="[Function]"
          verticalsubtitle="false"
        />
      </v-window-item-stub>
      <v-window-item-stub
        data-v-ac45726d=""
        disabled="false"
        eager="false"
      >
        <shiftview-cards-list-stub
          additionallineprops="[object Object]"
          bordercolorkey="[Function]"
          class="card-list mx-n4 px-4 pt-4 align-content-start"
          data-v-ac45726d=""
          dense="false"
          disabled="false"
          iconcolorfn="[Function]"
          iconfn="[Function]"
          items=""
          primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
          primaryactiontext=""
          primaryactiontooltip=""
          secondaryactionicon=""
          secondaryactiontooltip=""
          subtitleitemsprops="[Function]"
          tertiaryactionicon="[Function]"
          tertiaryactiontooltip="Unjoin"
          titleiconfn="[Function]"
          titletextkey="[Function]"
          verticalsubtitle="false"
        />
      </v-window-item-stub>
      <v-window-item-stub
        data-v-ac45726d=""
        disabled="false"
        eager="false"
      >
        <shiftview-cards-list-stub
          additionallineprops="[object Object]"
          bordercolorkey="[Function]"
          class="card-list mx-n4 px-4 pt-4 align-content-start"
          data-v-ac45726d=""
          dense="false"
          disabled="false"
          iconcolorfn="[Function]"
          iconfn="[Function]"
          items=""
          primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
          primaryactiontext=""
          primaryactiontooltip=""
          secondaryactionicon=""
          secondaryactiontooltip=""
          subtitleitemsprops="[Function]"
          tertiaryactionicon="[Function]"
          tertiaryactiontooltip="Unjoin"
          titleiconfn="[Function]"
          titletextkey="[Function]"
          verticalsubtitle="false"
        />
      </v-window-item-stub>
      
    </v-window-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-ac45726d=""
    tag="div"
  >
    <v-spacer-stub
      data-v-ac45726d=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-ac45726d=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`DowntimeOverviewDialog > renders correctly in mobile view 1`] = `
<div
  data-v-ac45726d=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-ac45726d=""
    iconcolor="lw-red"
    title="Downtime overview"
    titleicon="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z"
  />
  <v-card-text-stub
    class="px-4 py-0"
    data-v-ac45726d=""
    tag="div"
  >
    <generic-tabs-row-stub
      color=""
      countfunc="[Function]"
      data-v-ac45726d=""
      disabledrulefunc="[Function]"
      grow="false"
      height="48"
      items="[object Object],[object Object],[object Object]"
      labelkey="name"
      modelvalue="0"
      notclickable="false"
      sizeclass=""
      tabnamefn="[Function]"
    />
    <v-window-stub
      class="overflow-visible"
      continuous="false"
      crossfade="false"
      data-v-ac45726d=""
      direction="horizontal"
      disabled="false"
      mandatory="force"
      modelvalue="0"
      nexticon="$next"
      previcon="$prev"
      reverse="false"
      selectedclass="v-window-item--active"
      showarrows="false"
      tag="div"
      verticalarrows="false"
    >
      
      <v-window-item-stub
        data-v-ac45726d=""
        disabled="false"
        eager="false"
      >
        <shiftview-cards-list-stub
          additionallineprops="[object Object]"
          bordercolorkey="[Function]"
          class="card-list mx-n4 px-4 pt-4 align-content-start card-list--mobile"
          data-v-ac45726d=""
          dense="true"
          disabled="false"
          iconcolorfn="[Function]"
          iconfn="[Function]"
          items=""
          primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
          primaryactiontext=""
          primaryactiontooltip=""
          secondaryactionicon=""
          secondaryactiontooltip=""
          subtitleitemsprops="[Function]"
          tertiaryactionicon="[Function]"
          tertiaryactiontooltip="Unjoin"
          titleiconfn="[Function]"
          titletextkey="[Function]"
          verticalsubtitle="false"
        />
      </v-window-item-stub>
      <v-window-item-stub
        data-v-ac45726d=""
        disabled="false"
        eager="false"
      >
        <shiftview-cards-list-stub
          additionallineprops="[object Object]"
          bordercolorkey="[Function]"
          class="card-list mx-n4 px-4 pt-4 align-content-start card-list--mobile"
          data-v-ac45726d=""
          dense="true"
          disabled="false"
          iconcolorfn="[Function]"
          iconfn="[Function]"
          items=""
          primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
          primaryactiontext=""
          primaryactiontooltip=""
          secondaryactionicon=""
          secondaryactiontooltip=""
          subtitleitemsprops="[Function]"
          tertiaryactionicon="[Function]"
          tertiaryactiontooltip="Unjoin"
          titleiconfn="[Function]"
          titletextkey="[Function]"
          verticalsubtitle="false"
        />
      </v-window-item-stub>
      <v-window-item-stub
        data-v-ac45726d=""
        disabled="false"
        eager="false"
      >
        <shiftview-cards-list-stub
          additionallineprops="[object Object]"
          bordercolorkey="[Function]"
          class="card-list mx-n4 px-4 pt-4 align-content-start card-list--mobile"
          data-v-ac45726d=""
          dense="true"
          disabled="false"
          iconcolorfn="[Function]"
          iconfn="[Function]"
          items=""
          primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
          primaryactiontext=""
          primaryactiontooltip=""
          secondaryactionicon=""
          secondaryactiontooltip=""
          subtitleitemsprops="[Function]"
          tertiaryactionicon="[Function]"
          tertiaryactiontooltip="Unjoin"
          titleiconfn="[Function]"
          titletextkey="[Function]"
          verticalsubtitle="false"
        />
      </v-window-item-stub>
      
    </v-window-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-ac45726d=""
    tag="div"
  >
    <v-spacer-stub
      data-v-ac45726d=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-ac45726d=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`DowntimeOverviewDialog > renders correctly in second tab 1`] = `
<div
  data-v-ac45726d=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-ac45726d=""
    iconcolor="lw-red"
    title="Downtime overview"
    titleicon="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z"
  />
  <v-card-text-stub
    class="px-4 py-0"
    data-v-ac45726d=""
    tag="div"
  >
    <generic-tabs-row-stub
      color=""
      countfunc="[Function]"
      data-v-ac45726d=""
      disabledrulefunc="[Function]"
      grow="false"
      height="48"
      items="[object Object],[object Object],[object Object]"
      labelkey="name"
      modelvalue="1"
      notclickable="false"
      sizeclass=""
      tabnamefn="[Function]"
    />
    <v-window-stub
      class="overflow-visible"
      continuous="false"
      crossfade="false"
      data-v-ac45726d=""
      direction="horizontal"
      disabled="false"
      mandatory="force"
      modelvalue="1"
      nexticon="$next"
      previcon="$prev"
      reverse="false"
      selectedclass="v-window-item--active"
      showarrows="false"
      tag="div"
      verticalarrows="false"
    >
      
      <v-window-item-stub
        data-v-ac45726d=""
        disabled="false"
        eager="false"
      >
        <shiftview-cards-list-stub
          additionallineprops="[object Object]"
          bordercolorkey="[Function]"
          class="card-list mx-n4 px-4 pt-4 align-content-start"
          data-v-ac45726d=""
          dense="false"
          disabled="false"
          iconcolorfn="[Function]"
          iconfn="[Function]"
          items="[object Object]"
          primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
          primaryactiontext=""
          primaryactiontooltip=""
          secondaryactionicon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
          secondaryactiontooltip=""
          subtitleitemsprops="[Function]"
          tertiaryactionicon="[Function]"
          tertiaryactiontooltip="Unjoin"
          titleiconfn="[Function]"
          titletextkey="[Function]"
          verticalsubtitle="false"
        />
      </v-window-item-stub>
      <v-window-item-stub
        data-v-ac45726d=""
        disabled="false"
        eager="false"
      >
        <shiftview-cards-list-stub
          additionallineprops="[object Object]"
          bordercolorkey="[Function]"
          class="card-list mx-n4 px-4 pt-4 align-content-start"
          data-v-ac45726d=""
          dense="false"
          disabled="false"
          iconcolorfn="[Function]"
          iconfn="[Function]"
          items="[object Object]"
          primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
          primaryactiontext=""
          primaryactiontooltip=""
          secondaryactionicon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
          secondaryactiontooltip=""
          subtitleitemsprops="[Function]"
          tertiaryactionicon="[Function]"
          tertiaryactiontooltip="Unjoin"
          titleiconfn="[Function]"
          titletextkey="[Function]"
          verticalsubtitle="false"
        />
      </v-window-item-stub>
      <v-window-item-stub
        data-v-ac45726d=""
        disabled="false"
        eager="false"
      >
        <shiftview-cards-list-stub
          additionallineprops="[object Object]"
          bordercolorkey="[Function]"
          class="card-list mx-n4 px-4 pt-4 align-content-start"
          data-v-ac45726d=""
          dense="false"
          disabled="false"
          iconcolorfn="[Function]"
          iconfn="[Function]"
          items="[object Object]"
          primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
          primaryactiontext=""
          primaryactiontooltip=""
          secondaryactionicon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
          secondaryactiontooltip=""
          subtitleitemsprops="[Function]"
          tertiaryactionicon="[Function]"
          tertiaryactiontooltip="Unjoin"
          titleiconfn="[Function]"
          titletextkey="[Function]"
          verticalsubtitle="false"
        />
      </v-window-item-stub>
      
    </v-window-stub>
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-ac45726d=""
    tag="div"
  >
    <v-spacer-stub
      data-v-ac45726d=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-ac45726d=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;
